# cookiecrumbs

./: .env.example  .gitignore  AGENTS.md  README.md  flake.nix  justfile
api-contract/: openapi.yaml
api-contract/postman/: sentry-demo.postman_collection.json
apps/go-gin/: .env.example  go.mod  go.sum  main.go
apps/java-spring/: .env.example  build.gradle
apps/java-spring/src/main/java/com/cookiecrumbs/demo/: DemoApplication.java  DemoController.java  JvmMetricsPublisher.java
apps/java-spring/src/main/resources/: application.properties  logback-spring.xml
apps/node-express/: .env.example  package-lock.json  package.json
apps/node-express/src/: index.ts  instrument.ts
apps/python-django/: .env.example  manage.py  requirements.txt
apps/python-django/cookiecrumbs/: asgi.py  settings.py  urls.py  wsgi.py
apps/python-django/demo/: __init__.py  views.py
apps/rust-axum/: .env.example  Cargo.toml
apps/rust-axum/src/: main.rs
db/: schema.sql
infra/migrations/: 001_init.sql
