[package]
name = "rust-axum"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "rustls"], default-features = false }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
sentry = { version = "0.42", features = ["tracing", "log", "logs", "reqwest", "rustls"], default-features = false }
sentry-tower = { version = "0.42", features = ["http"] }
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.30"
env_logger = "0.11.10"

[profile.release]
opt-level = 3
lto = true
